# OpenGL-sandbox

./: CMakeLists.txt  LICENSE  Readme.md  testscene.json
Glitter/Sources/: actor.cpp  actor.hpp  camera.cpp  camera.hpp  config.hpp  cubemap.cpp  cubemap.hpp  engine.cpp  engine.hpp  framebuffer.hpp  gui.cpp  gui.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  native.cpp  native.hpp  scene.cpp  scene.hpp  sceneobject.cpp  sceneobject.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
Glitter/Sources/effects/: depth.cpp  depth.hpp  effectmanager.cpp  effectmanager.hpp  envmap.cpp  envmap.hpp  flat.cpp  flat.hpp  gouraud.cpp  gouraud.hpp  normal.cpp  normal.hpp  phong.cpp  phong.hpp
OpenGL-sandbox/Sources/: camera.cpp  cubemap.cpp  engine.cpp  engine.hpp  gui.cpp  json.cpp  json.hpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.hpp  native.cpp  native.hpp  scene.cpp  shader.hpp  skybox.cpp  texture.hpp
OpenGL-sandbox/Sources/effects/: cooktorrance.cpp  cooktorrance.hpp  effectmanager.cpp  effectmanager.hpp  envmap.cpp  flat.cpp  flat.hpp  gouraud.cpp  lambert.cpp  lambert.hpp  minnaert.cpp  minnaert.hpp  normal.cpp  orennayar.cpp  orennayar.hpp  phong.cpp  phong.hpp  schlick.cpp  schlick.hpp
resources/: lights.JSON  scene.json
resources/models/sponza/: imgui.ini
resources/pages/: depth.html  flat.html  gouraud.html  normal.html  phong.html
resources/shaders/: camera.frag  camera.vert  cooktorrance.frag  depth.frag  envmap.frag  envmap.vert  flat.frag  flat.vert  gouraud.frag  gouraud.vert  lambert.frag  lambert.vert  lamp.frag  lamp.vert  minnaert.frag  normals.frag  normals.vert  oren-nayar.frag  phong.frag  phong.vert  schlick.frag
